Java 11 lint migrations. Suppress try-with-resources warning.