@@ -3,6 +3,8 @@ package in.dragonbra.javasteam.base;
 import in.dragonbra.javasteam.util.log.LogManager;
 import in.dragonbra.javasteam.util.log.Logger;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * This is the abstract base class for all available client messages.
  * It's used to maintain packet payloads and provide a header for all client messages.
@@ -32,8 +34,11 @@ public abstract class MsgBase<HdrType extends ISteamSerializable> extends Abstra
     public MsgBase(Class<HdrType> clazz, int payloadReserve) {
         super(payloadReserve);
         try {
-            header = clazz.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            header = clazz.getDeclaredConstructor().newInstance();
+        } catch (NoSuchMethodException |
+                 InstantiationException |
+                 IllegalAccessException |
+                 InvocationTargetException e) {
             logger.debug(e);
         }
     }
